# Grant_Automation

./: .env.example  .gitignore  =0.60.0  AI_LITE_MIGRATION_READINESS_REPORT.md  AI_PROCESSOR_COMPREHENSIVE_FEATURES.md  AI_PROCESSOR_TAB_GUIDE.md  CATALYNX_CRITICAL_FIXES_COMPLETED.md  CATALYNX_FUNCTIONALITY_INVENTORY.txt  CATALYNX_WEB_STARTUP_GUIDE.md  CATALYNX_WORKFLOW_TEST_RESULTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_EXECUTIVE_SUMMARY.md  COMPREHENSIVE_CLEANUP_SUMMARY.md  CONTEXT_WINDOW_6_SUMMARY.md  CONTRIBUTING.md  COST_VALIDATION_REPORT.md  Catalynx Database Schema - Table Relatio.md  DASHBOARD_README.md  DASHBOARD_TEST_GUIDE.md  DEVOPS_TESTING_GUIDE.md  E2E_TEST_REPORT.md  FINAL_CATALYNX_MASTERS_THESIS_DOSSIER.html  GPT5_CONTENT_ISSUE_ANALYSIS.md  Grant Research Automation - Strategic Design Document.md  HANDOFF_SESSION_NOTES.md  HANOFF SESSION PLUS.md  IMPLEMENTATION_ROADMAP.md  MANUAL_TESTING_CHECKLIST.md  MODAL_INTEGRATION_GUIDE.md  NAVIGATION_ENHANCEMENT_SUMMARY.md  OPTIMIZED_SCORING_IMPLEMENTATION.md  PERFORMANCE_ANALYSIS_REPORT.md  PHASE2_COMPLETE.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_PROOF_OF_CONCEPT.md  PHASES_COMPLETED_SUMMARY.md  PHASE_1_IMPLEMENTATION.md  PHASE_2_COMPLETION_REPORT.md  PHASE_4B_WEB_INTEGRATION_REPORT.md  (+283 more)
.claude/: settings.local.json
.claude/agents/: README.md  ai-code-reviewer.md  backend-architect.md  catalynx-ai-reviewer.md  catalynx-data-pipeline.md  catalynx-docs-devops.md  catalynx-intelligence.md  catalynx-system-quality.md  catalynx-web-dev.md  code-reviewer.md  data-specialist.md  data-transformer.md  devops-specialist.md  documentation-specialist.md  frontend-specialist.md  integration-debugger.md  performance-optimizer.md  requirements-analyst.md  security-specialist.md  test-scenarios.md  testing-expert.md  ux-ui-specialist.md
.github/ISSUE_TEMPLATE/: automated-bug.md
.github/project/: project_report_20250919_094356.html
.github/workflows/: ci.yml  test_pipeline.yml
OriginalScripts/: Step_00_lookup_from_ein.py  Step_04_PDF_download.py
archive/OriginalScripts/: Step_01_filter_irsbmf.py  Step_02_download_990s_propublica.py  Step_03_score_990s.py  Step_04_XML_download.py  Step_04_download_filing.py  Step_05_ocr_and_score_pdfs.py
archive/analysis_scripts/: complete_tier_real_990pf_analysis.py  execute_complete_tier_analysis.py  execute_real_990pf_comprehensive_analysis.py  execute_real_complete_tier_with_gpt5.py  standalone_complete_tier_real_analysis.py
archive/debug_files/: comprehensive_gpt5_debug.py  debug_gpt5_response.py  debug_integration_service.py  debug_openai_quota.py
archive/test_files/: ai_lite_demo.py  create_html_dossier_real_data.py  create_real_data_text_dossier.py  create_ultimate_masters_pdf.py  fetch_heroes_bridge_data.py  fetch_real_data_30_0219424.py  generate_gpt5_dossier_content.py  generate_real_data_masters_dossier.py  generate_ultimate_pdf_dossier.py  real_gpt5_heavy_processing.py  real_world_validation_suite.py  run_4_stage_ai_processing.py  validate_cleanup.py  (+3 more)
archived_streamlit_components/: dashboard_auth.py  dashboard_minimal.py  profile_manager.py  test_analytics_pipeline.py  test_dashboard.py
baml_client/: async_client.ts  async_request.ts  index.ts  inlinedbaml.ts  parser.ts  partial_types.ts  sync_client.ts  sync_request.ts  type_builder.ts  types.ts
baml_src/: scoring_schemas.baml
chatgpt_test_package/: README_ChatGPT_Testing.md  TESTING_INSTRUCTIONS.md  ai_heavy_chatgpt_test.json  ai_heavy_prompt.txt  ai_lite_chatgpt_test.json  ai_lite_prompt.txt  test_scenarios.json
data/: README.md  catalynx.db.backup_20250911_125925  data_structure.json
docs/: 12-FACTOR_COMPLIANCE_MATRIX.md  API_DOCUMENTATION.md  CLEANUP_PHASE_1_SUMMARY.md  CODEBASE_REVIEW_2026_02.md  CODE_REVIEW_AND_PLAN.md  GUI_API_MAP.md  GUI_DOCUMENTATION_INDEX.md  GUI_QUICK_START.md  GUI_REPLICATION_GUIDE.md  GUI_TEST_RESULTS_TEMPLATE.md  GUI_USER_TESTING_PLAN.md  GUI_VISUAL_REFERENCE.md  MAIN_MERGE_HANDOFF.md  MIGRATION_HISTORY.md  NETWORK_INTELLIGENCE_PLAN.md  PHASE1_BAML_CONVERSION_COMPLETE.md  PHASE1_SCORING_COMPLIANCE_SUMMARY.md  PHASE2_CODE_REVIEW.md  PHASE4_COMPREHENSIVE_TESTING_PROGRESS.md  PHASE4_TEST_EXECUTION_SUMMARY.md  PHASE9_FIX_SUMMARY.md  PHASE9_GUI_TEST_FINDINGS.md  PHASE_5_P1_TEST_COMPLETION.md  PHASE_7_COMPLIANCE_AUDIT.md  PIPELINE_REDESIGN_PLAN.md  PROCESSOR_CLEANUP_AUDIT.md  PROCESSOR_MIGRATION_STATUS.md  PROFILE_ENHANCEMENT_DATA_FLOW.md  TIER_CONSOLIDATION_RATIONALE.md  TIER_SYSTEM.md  TODO_TRIAGE.md  TOOL_ARCHITECTURE_MAPPING.md  TRANSFORMATION_CLEANUP_COMPLETE.md  TWO_TOOL_ARCHITECTURE.md  api-documentation.md  cross_990_field_standardization.md  data_transformation_guide.md  database-architecture.md  error_handling_standards.md  mcp-integration-summary.md  (+2 more)
docs/12-factor-transformation/micro-tools-examples/bmf-filter-tool/: 12factors.toml  README.md  pyproject.toml
docs/12-factor-transformation/micro-tools-examples/bmf-filter-tool/baml_src/: bmf_filter.baml  clients.baml  generators.baml
examples/: foundation_network_demo.py
scripts/: migrate_tool_paths.py  run_performance_tests.bat  run_tests.bat  setup_local_github_cli.py
src/: __init__.py
test_framework/: README_MODERNIZED_TESTING.md  WORKFLOW_1_RESULTS.md  analyze_categories.py  monte_carlo_optimizer.py  scoring_test_harness.py  show_top_results.py  test_all_profiles.py  unified_test_base.py
test_static/: test.html
tests/: README.md  __init__.py  conftest.py  test_data_transformation.py  test_foundation_network_graph.py  test_tools_api.py
tools/: TOOLS_INVENTORY.md  foundation_grantee_bundling_tool.py  simple_workflow_test.py  test_two_tool_workflow.py  three_tool_workflow_orchestrator.py  workflow_integration_test.py
tools/bmf_filter_tool/: .env.tool.example  12factors.toml  pyproject.toml  show_actual_data.py  show_inputs_outputs.py  simple_test.py  validate_implementation.py
tools/bmf_filter_tool/app/: __init__.py  bmf_filter.py
tools/bmf_filter_tool/baml_src/: bmf_filter.baml  generators.baml
tools/bmf_filter_tool/test_data/: sample_bmf.csv
tools/bmf_filter_tool/tests/: __init__.py  test_bmf_filter.py
(+2003 files in other folders)
