[project]
name = "bmf-filter-tool"
version = "1.0.0"
description = "12-Factor BMF filtering tool integrated with Catalynx platform"
authors = [
    {name = "Catalynx Development", email = "dev@catalynx.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["12-factor", "agents", "nonprofit", "bmf", "filtering", "baml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core web framework (matching existing Catalynx)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",

    # Database and async support (compatible with existing)
    "aiosqlite>=0.19.0",
    "sqlite3",

    # Data validation and serialization
    "pydantic>=2.0.0",

    # BAML integration - core requirement
    "baml-py>=0.60.0",

    # Configuration management
    "python-dotenv>=1.0.0",

    # HTTP client for testing and integration
    "httpx>=0.25.0",

    # Logging and monitoring (structured logs)
    "structlog>=23.2.0",

    # Performance monitoring
    "psutil>=5.9.0",

    # Type hints and validation
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing framework
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",

    # Code quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",

    # Development tools
    "ipython>=8.0.0",
    "rich>=13.0.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.25.0",
    "faker>=19.0.0",  # For generating test data
]

performance = [
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.61.0",
    "py-spy>=0.3.14",
]

integration = [
    # For testing integration with existing Catalynx
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",  # If needed for advanced DB testing
]

[project.scripts]
bmf-filter = "app.main:main"
bmf-server = "app.server:main"
bmf-benchmark = "tests.test_performance:run_benchmarks"

[project.urls]
Homepage = "https://github.com/your-org/catalynx"
Documentation = "https://github.com/your-org/catalynx/tree/main/tools/bmf-filter-tool"
Repository = "https://github.com/your-org/catalynx"
Issues = "https://github.com/your-org/catalynx/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
app = ["generated/**/*.py", "*.baml"]

# Code formatting and linting configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  app/generated/.*
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_glob = ["app/generated/**"]

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true
exclude = [
    "app/generated/.*",
    "tests/.*",
]

[tool.ruff]
line-length = 88
target-version = "py38"
exclude = [
    "app/generated",
    "__pycache__",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from None considered anti-pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101"]  # Allow unused args and asserts in tests

# Testing configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks",
    "requires_db: marks tests that require database access",
    "requires_llm: marks tests that require LLM API access",
]

# Coverage configuration
[tool.coverage.run]
source = ["app"]
omit = [
    "app/generated/*",
    "tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]